[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/learn_title_green.png" type="Texture" id=1]
[ext_resource path="res://data/flags/Nepal.png" type="Texture" id=2]
[ext_resource path="res://scenes/Common/Flag.gd" type="Script" id=3]
[ext_resource path="res://assets/themes/theme_green.tres" type="Theme" id=4]
[ext_resource path="res://scenes/LearningGame/DetailInfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/LearningGame/DetailsScreen.gd" type="Script" id=6]
[ext_resource path="res://scenes/Common/ScrollContainer.gd" type="Script" id=7]

[node name="DetailsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
color = Color( 0.0901961, 0.721569, 0.564706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleTexture" type="TextureRect" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagArea" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.5
margin_top = 59.0
margin_right = 205.5
margin_bottom = 281.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag" type="TextureRect" parent="ColorRect/FlagArea"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailsArea" type="ColorRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Country" type="Label" parent="ColorRect/DetailsArea"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -185.5
margin_right = 185.5
margin_bottom = 80.0
text = "Nepal"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/DetailsArea"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/DetailsArea/ScrollContainer"]
margin_right = 401.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DetailInfo" parent="ColorRect/DetailsArea/ScrollContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 401.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="DetailInfo2" parent="ColorRect/DetailsArea/ScrollContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 401.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )

[node name="DetailInfo3" parent="ColorRect/DetailsArea/ScrollContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 401.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
